@@ -5,6 +5,10 @@
 	
 	* main/Math/MathUtils.class.php: getAbsoluteDeviation(): calculate
 	absolute deviation.
+	
+	* main/Math/MathUtils.class.php: getCovariance(): calculate
+	covariance between two value arrays by formula:
+	cov(X,Y) = sum((Xi-Xavg) * (Yj-Xavg) / n-1).
 
 2009-11-25	Vladlen Y. Koshelev
 
